Add: 지역별 자치구 추가 (지역별 페이지 끝)

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.box {
+  margin: 10px;
+  width: 80px;
+  background: white;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
 
 .App-header {
   background-color: #282c34;
